syntax = "proto3";
package block;

import "transaction/transaction.proto";

option go_package = "github.com/filefilego/filefilego/internal/block";


// ProtoBlock is the proto representation of a block.
message ProtoBlock {
    // hash represents the block hash.
    bytes hash = 1;
    // signature of the block.
    bytes signature = 2;
    // timestamp represents the block time.
    int64 timestamp = 3;
    // data includes arbitrary data from the sealer.
    bytes data = 4;
    // previous_block_hash is the hash of the previous block.
    bytes previous_block_hash = 5;
    // transactions contain a list of transactions in the block.
    repeated transaction.ProtoTransaction transactions = 6;
    // number represents the block number.
    uint64 number = 7;
}