syntax = "proto3";
package transaction;


option go_package = "github.com/filefilego/filefilego/internal/transaction";


// ProtoTransaction is the proto representation of a transaction.
message ProtoTransaction {
    // hash represents the block hash.
    bytes hash = 1;
    // signature of the block.
    bytes signature = 2;
    // public_key is the sender's pubkey.
    bytes public_key = 3;
    // nounce of the transaction.
    bytes nounce = 4;
    // data attached to the transaction.
    bytes data = 5;
    // from sender
    string from = 6;
    // to receiver.
    string to = 7;
    // value of the transaction.
    string value = 8;
    // transaction_fees is the fees attached to a transaction.
    string transaction_fees = 9;
    // chain represents the network chain.
    bytes chain = 10;
}